--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GankIO</string>
+    <string name="app_name">Gank</string>
     <string name="home">home</string>
     <string name="perm_identity">me</string>
     <string name="explore">explore</string>
